# landscape-scx

./: Cargo.toml  README.md
bpf/: landscape_scx.autogen.h  landscape_scx.bpf.c
configs/: landscape-scx.toml
configs/profiles/: README.md  archld-32c-dualwan-8q-custom-bpf-full-trex-l3.toml  archld-32c-dualwan-8q-custom-bpf-full.toml  archld-32c-dualwan-8q-custom-bpf.toml  archld-32c-dualwan-8q.toml  archld-32c-dualwan-autoq-custom-bpf.toml  archld-32c-dualwan.toml  archld-32c-trex-lan-8q-cfs.toml  archld-32c-trex-lan-8q-custom-bpf-full.toml  archld-32c-trex-lan-8q.toml  auto-discover-auto-partition.toml  balanced-4c.toml  balanced-8c.toml  conservative-any.toml  custom-bpf-local-test.toml  landscape-forwarding-16c.toml  landscape-forwarding-8c.toml  low-latency-8c.toml  throughput-16c.toml
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/scx-bpf/: Cargo.toml
crates/scx-bpf/src/: lib.rs
docs/: benchmark.md  ebpf-routing-sched-ext-design.md  roadmap.md  trex-lan-full-switch-evaluation.md
scripts/: apply_network_locality.sh  bench_profile_ab.sh  bench_schedulers.sh  bench_schedulers_full.sh  bench_schedulers_multi.sh  install.sh  uninstall.sh
systemd/: landscape-scx.service
